--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= stylesheet_link_tag 'https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css' %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application' %>
+    <%= javascript_include_tag 'application', "https://js.stripe.com/v2/", "https://js.stripe.com/v3/", 'data-turbolinks-track': 'reload' %>
+
+    <%= tag :meta, name: "stripe-public-key", content: Figaro.env.stripe_publishable_key %>
   </head>
 
   <body class="<%= yield (:body_class) %>">
@@ -39,21 +41,24 @@
         <div class="navbar-end">
           <div class="navbar-item">
             <div class="field is-grouped">
+              <p class="control">
+                <%= link_to 'Poster une annonce', new_job_path, class: "navbar-item button is-primary is-rounded" %>
+              </p>
             <% if user_signed_in? %>
 
               <div class="navbar-item has-dropdown is-hoverable">
-                <%= link_to 'Account', edit_user_registration_path, class: "navbar-link" %>
+                <%= link_to 'Mon compte', edit_user_registration_path, class: "navbar-link" %>
                 <div class="navbar-dropdown is-right">
                   <%= link_to current_user.name, edit_user_registration_path, class:"navbar-item" %>
-                  <%= link_to "Log Out", destroy_user_session_path, method: :delete, class:"navbar-item" %>
+                  <%= link_to "Déconnexion", destroy_user_session_path, method: :delete, class:"navbar-item" %>
                 </div>
               </div>
             <% else %>
             <p class="control">
-              <%= link_to "Sign In", new_user_session_path, class:"navbar-item button" %>
+              <%= link_to "Connexion", new_user_session_path, class:"navbar-item button" %>
             </p>
             <p class="control">
-              <%= link_to "Sign up", new_user_registration_path, class:"navbar-item button"%>
+              <%= link_to "S'inscrire", new_user_registration_path, class:"navbar-item button"%>
             </p>
             <% end %>
 
@@ -63,17 +68,13 @@
     </div>
   </nav>
 
-  <section class="section">
-    <div class="container">
       <%= yield %>
-    </div>
-  </section>
 
   <footer class="footer">
     <div class="container">
       <div class="content has-text-centered">
         <p>
-        Visit <a href="https://web-crunch.com" target="_blank">Web-Crunch.com</a> for more builds like this one.
+        Visitez <a href="https://fwivo.com" target="_blank">Fwivo.com</a> afin de voir les autres projets.
         </p>
       </div>
     </div>
