--- a/app/views/jobs/_payment.html.erb
+++ b/app/views/jobs/_payment.html.erb
@@ -1,5 +1,5 @@
 <% if !@job.persisted? %>
-  <h4 class="subtitle is-4">Valider votre annonce</h4>
+  <h4 class="subtitle is-4">Publier votre annonce</h4>
 
   <div class="notification is-light has-text-centered">
     <i class="fa fa-credit-card"></i>
