--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -15,7 +15,7 @@
 			</div>
 
 		  <div class="form-actions">
-		    <%= f.button :submit, "Resend confirmation instructions", class:'button is-warning' %>
+		    <%= f.button :submit, "Renvoyer le mail de confirmation", class:'button is-warning' %>
 		  </div>
 		<% end %>
 
