--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -3,7 +3,7 @@
     <div class="columns is-centered">
       <div class="column is-4">
 
-        <h2 class="title is-2">Change your password</h2>
+        <h2 class="title is-2">Changez votre mot de passe</h2>
 
         <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
           <%= f.error_notification %>
@@ -23,8 +23,8 @@
             </div>
           </div>
 
-          
-            <%= f.button :submit, "Change my password", class:"button is-outlined" %>
+
+            <%= f.button :submit, "Changer mon mot de passe", class:"button is-outlined" %>
 
         <% end %>
 
