--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,7 +3,7 @@
     <div class="columns is-centered">
       <div class="column is-4">
 
-      <h2 class="title is-2">Edit <%= resource_name.to_s.humanize %></h2>
+      <h2 class="title is-2">Modifier mon profil</h2>
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
         <%= f.error_notification %>
 
@@ -27,7 +27,7 @@
 
           <div class="field">
             <div class="control">
-            <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false, input_html: { class: "input"}, wrapper: false, label_html: { class: "label" } %>
+            <%= f.input :password, autocomplete: "off", hint: "à laisser vide si vous ne souhaitez pas changer de mot de passe", required: false, input_html: { class: "input"}, wrapper: false, label_html: { class: "label" } %>
             </div>
           </div>
 
@@ -39,17 +39,17 @@
 
           <div class="field">
             <div class="control">
-              <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true, input_html: { class: "input"}, wrapper: false, label_html: { class: "label" } %>
+              <%= f.input :current_password, hint: "saisissez votre mot de passe actuel", required: true, input_html: { class: "input"}, wrapper: false, label_html: { class: "label" } %>
             </div>
         </div>
 
-        <%= f.button :submit, "Update", class:"button is-primary" %>
+        <%= f.button :submit, "Mettre à jour", class:"button is-primary" %>
 
       <% end %>
 
         <hr />
-        <h3 class="title is-5">Cancel my account</h3>
-        <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+        <h3 class="title is-5">Me déconnecter</h3>
+        <p>Supprimer mon compte <%= link_to "Supprimer mon compte", registration_path(resource_name), data: { confirm: "Confirmer" }, method: :delete %></p>
 
       </div>
     </div>
