--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,14 +1,14 @@
 <div class="columns pt4 pb7">
   <div class="column is-7 is-offset-1">
 
-    <p class="f7"><i class="fa fa-clock"></i> Posté <%= time_ago_in_words(@job.created_at) %> ago</p>
+    <p class="f7"><i class="fa fa-clock"></i> Posté il y'a <%= time_ago_in_words(@job.created_at) %></p>
     <h1 class="title is-2"><%= @job.title %></h1>
 
     <ul class="list pb4">
       <li class="inline-block f6 pr2"><%= job_type(@job.job_type) %></li>
       <li class="inline-block f6 ph2"><i class="fa fa-pin"></i> <%= @job.location %></li>
       <% if @job.remote_ok? %>
-        <li class="inline-block f6 ph2"><i class="fa fa-wifi"></i> Remote Job</li>
+        <li class="inline-block f6 ph2"><i class="fa fa-wifi"></i> Télétravail</li>
       <% end %>
     </ul>
 
@@ -16,7 +16,7 @@
       <%= @job.description.html_safe %>
     </div>
 
-    <%= link_to 'Apply to this job', @job.apply_url, class:"button is-rounded is-large is-fullwidth is-link" %>
+    <%= link_to 'Postuler à ce job', @job.apply_url, class:"button is-rounded is-large is-fullwidth is-link" %>
 
   </div>
 
@@ -34,17 +34,17 @@
     <% end %>
     </div>
 
-    <%= link_to 'Apply to this job', @job.apply_url, class:"button is-rounded is-fullwidth is-link" %>
+    <%= link_to 'Postuler à ce job', @job.apply_url, class:"button is-rounded is-fullwidth is-link" %>
 
     <% if current_user.try(:admin) || job_author(@job) %>
       <ul class="pv3">
-        <li class="pv1 f6">Admin controls: </li>
+        <li class="pv1 f6">Outils: </li>
         <li class="pv1 inline-block">
-          <%= link_to 'View', @job, class: 'button is-small is-link is-outlined' %></li>
+          <%= link_to 'Consulter', @job, class: 'button is-small is-link is-outlined' %></li>
         <li class="pv1 inline-block">
-          <%= link_to 'Edit', edit_job_path(@job), class: 'button is-small is-link is-outlined' %></li>
+          <%= link_to 'Modifier', edit_job_path(@job), class: 'button is-small is-link is-outlined' %></li>
         <li class="pv1 inline-block">
-          <%= link_to 'Delete', @job, method: :delete, data: { confirm: 'Are you sure?' }, class: 'button is-small is-link is-outlined' %></li>
+          <%= link_to 'Supprimer', @job, method: :delete, data: { confirm: 'Confirmer' }, class: 'button is-small is-link is-outlined' %></li>
       </ul>
     <% end %>
   </div>
